update img src 22-04-25

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
                 <div class="txt">
                   <strong class="web-txt">클로바를 만드는 사람과 기술에 관한 이야기</strong>
                   <strong class="mob-txt">클로바를 만드는 사람과<br/> 기술에 관한 이야기</strong>
-                  <img class="fir-img web-img" src="https://static-clova.pstatic.net/static/57794fa/img/main/text_engineering_blog_logo.png" alt="CLOVA Engineering Blog">
-                  <img class="fir-img mob-img" src="https://static-clova.pstatic.net/static/57794fa/img/main/text_engineering_blog_logo.png" alt="CLOVA Engineering Blog">
+                  <img class="fir-img web-img" src="./img/text_engineering_blog_logo.png" alt="CLOVA Engineering Blog">
+                  <img class="fir-img mob-img" src="./img/text_engineering_blog_logo.png" alt="CLOVA Engineering Blog">
                 </div>
                 <div class="detail-box">
                   <a href="#" class="detail-btn" title="자세히 보기">자세히 보기</a>
@@ -209,7 +209,7 @@
               <div class="mob-bg-img mob-bg-img-3"></div>
               <div class="slide-desc">
                 <div class="txt">
-                  <img src="https://static-clova.pstatic.net/static/57794fa/img/main/img_hyperclova.png" alt="Hyper CLOVA">
+                  <img src="./img/img_hyperclova.png" alt="Hyper CLOVA">
                   <span>국내 최초의 초대규모 AI 첫 공개</span>
                 </div>
                 <div class="detail-box">
