--- a/index.html
+++ b/index.html
@@ -575,18 +575,18 @@
                 솔루션을 통해 비즈니스의 새로운<br/>
                 성장과 발전을 경험하세요.</p>
               <div class="detail-box">
-                <a href="#" class="detail-btn"  title="비지니스 문의">비지니스 문의</i></a>
+                <a href="#" class="detail-btn"  title="비지니스 문의">비지니스 문의</a>
               </div>
             </li>
           </ul>
           <div class="item item3 web">
             <h3 class="item-title blind">COME GROW WITH US</h3>
             <p class="item-desc blind">
-              사람을 위한 AI를 함께 만들어 갈<br>
+              사람을 위한 AI를 함께 만들어 갈<br/>
               인재를 찾습니다.
             </p>
             <div class="detail-box">
-              <a href="#" class="detail-btn"  title="자세히 보기">자세히 보기</i></a>
+              <a href="#" class="detail-btn"  title="자세히 보기">자세히 보기</a>
             </div>
           </div>
           <ul class="item-list mob">
@@ -599,7 +599,7 @@
                 네이버 클로바의 기술제품을<br/>
                 이용하세요</p>
               <div class="detail-box">
-                <a href="#" class="detail-btn" title="Biz Start">Biz Start</i></a>
+                <a href="#" class="detail-btn" title="Biz Start">Biz Start</a>
               </div>
             </li>
             <li class="item item2">
@@ -611,7 +611,7 @@
                 솔루션을 통해 비즈니스의 새로운<br/>
                 성장과 발전을 경험하세요.</p>
               <div class="detail-box">
-                <a href="#" class="detail-btn"  title="비지니스 문의">비지니스 문의</i></a>
+                <a href="#" class="detail-btn"  title="비지니스 문의">비지니스 문의</a>
               </div>
             </li>
             <li class="item item3">
@@ -619,11 +619,11 @@
                 <span class="blind">COME GROW WITH US</span>
               </h3>
               <p class="item-desc item-desc-strong">
-                사람을 위한 AI를 함께<br>
+                사람을 위한 AI를 함께<br/>
                 만들어 갈 인재를 찾습니다.
               </p>
               <div class="detail-box">
-                <a href="#" class="detail-btn"  title="자세히 보기">자세히 보기</i></a>
+                <a href="#" class="detail-btn"  title="자세히 보기">자세히 보기</a>
               </div>
             </li>
           </ul>
